--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Product Roboto&display=swap');
 
 body {
-    background-color: #5c1616;
+    background-color: #d1c2e1;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
